fix(page): handle vh issue on mobile
ref: https://css-tricks.com/the-trick-to-viewport-units-on-mobile

--- a/styles/Layout.module.css
+++ b/styles/Layout.module.css
@@ -1,5 +1,5 @@
 .main {
-  height: 100vh;
+  height: calc(var(--vh, 1vh) * 100);
   overflow: scroll;
 
   /* hide scrollbar */
