--- a/styles/TableContainer.module.css
+++ b/styles/TableContainer.module.css
@@ -1,5 +1,5 @@
 .container {
-  height: 100vh;
+  height: calc(var(--vh, 1vh) * 100);
   display: flex;
   align-items: center;
 }
